<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Main.DanfeActivity">


    <TextView
        android:id="@+id/tvDanfe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/textview_titulo_whitebackground"
        android:text="@string/activity_danfe_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <LinearLayout
        android:id="@+id/llDanfeAtivacaoNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvDanfe">

        <TextView
            android:id="@+id/tvDanfeAtivacaoNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-black"
            android:paddingTop="5dp"
            android:text="@string/activity_danfe_subtitulo"
            android:textColor="#FF4500"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDanfeRecomendacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif"
            android:paddingTop="5dp"
            android:text="@string/activity_danfe_descricao1"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnScanDanfe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_danfe_btnScanDanfe"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight ="2dp"
            android:insetBottom="2dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDanfeRecomendacoes" />

    </LinearLayout>


    <ListView
        android:id="@+id/lvDanfe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviarDanfes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDanfeAtivacaoNumero"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnEnviarDanfes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight ="2dp"
        android:insetBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/activity_danfe_btnEnviarDanfes"
        app:layout_constraintTop_toBottomOf="@+id/lvDanfe" />


</androidx.constraintlayout.widget.ConstraintLayout>